--- a/cs01.html
+++ b/cs01.html
@@ -324,7 +324,9 @@ div.tocify {
 </div>
 <div id="data" class="section level1">
 <h1>Data</h1>
-<p>-Liz fill in with links as needed to data sources (well data will need to be on Sakai) and data dictionary</p>
+<ul>
+<li>The data for this case study cannot be shared beyond class participants. Please see Sakai for the data and related documentation, and do not disseminate the data any further.</li>
+</ul>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
@@ -341,7 +343,7 @@ div.tocify {
 <h1>Slides</h1>
 <p><a href="decks/cs01_1_deck.html">Initial description of case study</a></p>
 <p><a href="decks/cs01_2_deck.html">Cross-validation</a></p>
-<p><a href="decks/cs01_3_deck.html">Robust regression-Liz to create</a></p>
+<p><a href="decks/cs01_3_deck.html">Robust regression</a></p>
 <p><a href="decks/cs01_4_deck.html">Causal inference-Liz to create</a></p>
 <p>Why do I care about outliers? Talk about financial crisis. Amy to do.</p>
 </div>
