--- a/cs02.html
+++ b/cs02.html
@@ -320,7 +320,9 @@ div.tocify {
 </div>
 <div id="data" class="section level1">
 <h1>Data</h1>
-<p>-Tessa provide a link here to the R dataframe version of the CIA Factbook data</p>
+<p>R Tutorial Data Set - <a href="data/popDF.RData">popDF.RData</a> - <a href="data/infMortDF.RData">infMortDF.RData</a> - <a href="data/codeMapDF.RData">codeMapDF.RData</a></p>
+<p>Full People And Society Data Set: - <a href="data/full.RData">full.RData</a></p>
+<p>How To Obtain Data from Factbook: - <a href="data/data_file.html">Factbook Tutorial</a></p>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
@@ -331,14 +333,14 @@ div.tocify {
 <div id="resources" class="section level1">
 <h1>Resources</h1>
 <p>Chapter 11 of Data Science in R: A Case Studies Approach to Computational Reasoning and Problem Solving by Nolan and Temple Lang (free e-book through Duke Libraries)</p>
-<p>Tessa fill in with tableau resources</p>
+<p><a href="http://library.capture.duke.edu/Panopto/Pages/Viewer.aspx?id=05708679-00e5-45c3-bb31-fd3724cd8009">Introduction to Tableau Video</a></p>
 </div>
 <div id="slides" class="section level1">
 <h1>Slides</h1>
-<p><a href="decks/cs02_1_deck.html">Initial description of CIA Factbook Data and Plotting in R: Tessa check and edit where indicated</a></p>
-<p><a href="decks/cs02_2_deck.html">Obtaining Tableau Guide: Tessa to create</a></p>
-<p><a href="decks/cs02_3_deck.html">Tableau visualization of Infant Mortality: Tessa to create and document</a></p>
-<p><a href="decks/cs02_4_deck.html">Tableau dashboard visualization of Infant Mortality: Tessa to create and document</a></p>
+<p><a href="decks/cs02_1_deck.html">Initial description of CIA Factbook Data and Plotting in R</a></p>
+<p><a href="decks/cs02_2_deck.html">Obtaining Tableau Guide</a></p>
+<p><a href="decks/cs02_3_deck.html">Tableau visualization of Infant Mortality</a></p>
+<p><a href="decks/cs02_4_deck.html">Tableau dashboard visualization of Infant Mortality</a></p>
 </div>
 
 
