--- a/cs04.html
+++ b/cs04.html
@@ -322,7 +322,7 @@ div.tocify {
 <div id="data" class="section level1">
 <h1>Data</h1>
 <ul>
-<li>NC voter files at <a href="https://dl.ncsbe.gov/?prefix=data/" class="uri">https://dl.ncsbe.gov/?prefix=data/</a> or somewhere related (Tessa to locate)</li>
+<li>NC voter files at <a href="https://dl.ncsbe.gov/?prefix=data/" class="uri">https://dl.ncsbe.gov/?prefix=data/</a></li>
 <li>Cooperative Congressional Election Study <a href="https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study" class="uri">https://cces.gov.harvard.edu/pages/welcome-cooperative-congressional-election-study</a></li>
 </ul>
 </div>
@@ -346,8 +346,8 @@ div.tocify {
 </div>
 <div id="slides" class="section level1">
 <h1>Slides</h1>
-<p><a href="decks/cs04_1_deck.html">Basics of Election Prediction: Tessa to do based on https://www.nytimes.com/2016/10/05/learning/lesson-plans/and-the-winner-is-predicting-the-2016-presidential-election.html</a></p>
-<p><a href="decks/cs04_2_deck.html">Mr. P Tutorial: Tessa based on http://www.princeton.edu/~jkastell/mrp_primer.html</a></p>
+<p><a href="decks/cs04_1_deck.html">Basics of Election Prediction</a></p>
+<p><a href="decks/cs04_2_deck.html">MRP Tutorial</a></p>
 </div>
 
 
