--- a/decks/data/data_file_2017.html
+++ b/decks/data/data_file_2017.html
@@ -133,16 +133,58 @@ $(document).ready(function () {
 <li>To find the corresponding number for each variable, e.g. 2119 for population, you use the “rankorderguide.html” and click on your desired variable. Then in the address bar at the top of the screen you can see the correct number for it.</li>
 <li>You may need to delete columns/clean the data to obtain the correct format.</li>
 </ul>
-<pre class="r"><code>setwd(&quot;~/Desktop/factbook/rankorder&quot;)
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
+<pre><code>## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
+## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
+## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
+## ✔ readr   1.1.1     ✔ forcats 0.3.0</code></pre>
+<pre><code>## Warning: package 'ggplot2' was built under R version 3.4.4</code></pre>
+<pre><code>## Warning: package 'tibble' was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package 'tidyr' was built under R version 3.4.4</code></pre>
+<pre><code>## Warning: package 'purrr' was built under R version 3.4.4</code></pre>
+<pre><code>## Warning: package 'dplyr' was built under R version 3.4.4</code></pre>
+<pre><code>## Warning: package 'stringr' was built under R version 3.4.4</code></pre>
+<pre><code>## Warning: package 'forcats' was built under R version 3.4.3</code></pre>
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code># get country codes
+ctr_codes &lt;- read.csv(&quot;country_codes.csv&quot;, header = TRUE)
+cia_codes &lt;- ctr_codes[,1:2] 
+#iso_codes &lt;- ctr_codes[,c(1,3)]
 
-pop_dta &lt;- read.delim(&quot;rawdata_2119.txt&quot;, header = FALSE, col.names = c(&quot;&quot;, &quot;country&quot;,&quot;pop&quot;))
-pop_dta &lt;- pop_dta[,-1] # remove blank column
-pop_dta$pop &lt;- as.numeric(gsub(&quot;,&quot;, &quot;&quot;, pop_dta$pop)) #remove commas, so it can be converted to numeric
-save(pop_dta, file=&quot;pop_data.RData&quot;)
+setwd(&quot;~/Desktop/factbook/rankorder&quot;)
 
-IM_dta &lt;- read.delim(&quot;rawdata_2091.txt&quot;, header = FALSE, col.names = c(&quot;&quot;, &quot;country&quot;,&quot;infMort&quot;, &quot;&quot;))
-IM_dta &lt;- IM_dta[,-c(1,4)]
-save(IM_dta, file=&quot;IM_data.RData&quot;)</code></pre>
+popDF &lt;- read_table(&quot;rawdata_2119.txt&quot;, col_names = c(&quot;X1&quot;, &quot;country&quot;,&quot;X3&quot;, &quot;X4&quot;, &quot;pop&quot;))</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   X1 = col_integer(),
+##   country = col_character(),
+##   X3 = col_character(),
+##   X4 = col_character(),
+##   pop = col_number()
+## )</code></pre>
+<pre class="r"><code>popDF &lt;- popDF[,-c(1,3,4)] # remove blank columns
+popDF &lt;- merge(cia_codes, popDF, by.x=&quot;Country&quot;, by.y = &quot;country&quot;) 
+popDF &lt;- popDF[,2:3]
+names(popDF) &lt;- c(&quot;ctry&quot;, &quot;pop&quot;)
+save(popDF, file=&quot;popDF.RData&quot;)
+
+infMortDF &lt;- read_table(&quot;rawdata_2091.txt&quot;, col_names = c(&quot;X1&quot;, &quot;country&quot;,&quot;X3&quot;, &quot;X4&quot;, &quot;infMort&quot;))</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   X1 = col_integer(),
+##   country = col_character(),
+##   X3 = col_character(),
+##   X4 = col_character(),
+##   infMort = col_double()
+## )</code></pre>
+<pre class="r"><code>infMortDF &lt;- infMortDF[,-c(1,3,4)]
+infMortDF &lt;- merge(cia_codes, infMortDF, by.x=&quot;Country&quot;, by.y = &quot;country&quot;)
+infMortDF &lt;- infMortDF[,2:3]
+names(infMortDF) &lt;- c(&quot;ctry&quot;, &quot;infMort&quot;)
+save(infMortDF, file=&quot;infMortDF.RData&quot;)</code></pre>
 </div>
 <div id="option-2-field-html-files" class="section level2">
 <h2>Option 2: Field HTML Files</h2>
@@ -151,6 +193,14 @@ save(IM_dta, file=&quot;IM_data.RData&quot;)</code></pre>
 library(rvest)</code></pre>
 <pre><code>## Loading required package: xml2</code></pre>
 <pre><code>## Warning: package 'xml2' was built under R version 3.4.3</code></pre>
+<pre><code>## 
+## Attaching package: 'rvest'</code></pre>
+<pre><code>## The following object is masked from 'package:purrr':
+## 
+##     pluck</code></pre>
+<pre><code>## The following object is masked from 'package:readr':
+## 
+##     guess_encoding</code></pre>
 <pre class="r"><code># read in data
 test &lt;- read_html(&quot;print_2010.html&quot;)
 t &lt;- test %&gt;% html_table(fill = TRUE) # converts html to a list
