--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ div.tocify {
 <td>211A Old Chemistry</td>
 </tr>
 <tr class="odd">
-<td><a href="https://lindsayberry.github.io">TA Lindsay Berry</a> <a href="mailto:lindsay.berry@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
+<td><a href="https://lindsayberry.github.io">TA TBA</a> <a href="mailto:lindsay.berry@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
 <td>Tue 1-2pm??</td>
 <td>211A Old Chemistry</td>
 </tr>
@@ -446,7 +446,7 @@ div.tocify {
 <tr class="odd">
 <td>October 31</td>
 <td>Individual CS: Web Scraping</td>
-<td></td>
+<td>CS4 Interim Report: Election Prediction Models</td>
 </tr>
 <tr class="even">
 <td>November 2</td>
