--- a/policies.html
+++ b/policies.html
@@ -345,7 +345,7 @@ div.tocify {
 </div>
 <div id="case-studies" class="section level4">
 <h4>Case Studies:</h4>
-<p>STA 440 involves detailed analysis of a series of case studies using current, relevant data. Each case study will involve a final submission and in some cases one or more interim submissions. Points will be allocated separately for each submission and case study based on the scope of work. Final case study submissions will involve both a written report and an oral presentation to be viewed by the other teams (in class or by video, as assigned).</p>
+<p>STA 440 involves detailed analysis of a series of case studies using current, relevant data. Each case study will involve a final submission and in some cases one or more interim submissions. Points will be allocated separately for each submission and case study based on the scope of work. Final case study submissions will involve a written report and possibly an oral presentation to be viewed by the other teams (in class or by video, as assigned).</p>
 <p>Additional details on the case studies will be provided as the course progresses.</p>
 <p>Individual contributions to each submission will be assessed using the fair division software Spliddit. Team members must provide Spliddit assessments in order to receive credit for an assignment.</p>
 <p>Each individual case study will be graded based on written reports (interim and final) and an oral presentation. Students may not collaborate with anyone on the individual case study, which should be treated like a take-home exam.</p>
