--- a/cs01.html
+++ b/cs01.html
@@ -77,6 +77,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -317,9 +320,9 @@ div.tocify {
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
 <ul>
-<li><p>determine which factors are associated with birthweight and characterize the relationship between each factor and birthweight</p></li>
-<li><p>explore whether fit of a linear regression model is adequate or whether robust regression methods are needed</p></li>
-<li><p>estimate the impact of eliminating maternal smoking on birthweight in a population</p></li>
+<li>determine which factors are associated with birthweight and characterize the relationship between each factor and birthweight</li>
+<li>explore whether fit of a linear regression model is adequate or whether robust regression methods are needed</li>
+<li>estimate the impact of eliminating maternal smoking on birthweight in a population</li>
 </ul>
 </div>
 <div id="data" class="section level1">
@@ -339,13 +342,20 @@ div.tocify {
 <h1>Resources</h1>
 <p>An Introduction to Statistical Learning with Applications in R, James et al (2013), Chapter 5: Resampling Methods (free e-book through Duke Libraries)</p>
 </div>
-<div id="slides" class="section level1">
-<h1>Slides</h1>
-<p><a href="decks/cs01_1_deck.html">Initial description of case study</a></p>
-<p><a href="decks/cs01_2_deck.html">Cross-validation</a></p>
-<p><a href="decks/cs01_3_deck.html">Robust regression</a></p>
-<p><a href="decks/cs01_4_deck.html">Causal inference-Liz to create</a></p>
-<p>Why do I care about outliers? Talk about financial crisis. Amy to do.</p>
+<div id="slides-coming-soon" class="section level1">
+<h1>Slides (coming soon)</h1>
+<!---
+[Initial description of case study](decks/cs01_1_deck.html)
+
+[Cross-validation](decks/cs01_2_deck.html)
+
+[Robust regression](decks/cs01_3_deck.html)
+
+[Causal inference-Liz to create](decks/cs01_4_deck.html)
+
+Why do I care about outliers?  Talk about financial crisis. Amy to do.
+
+--->
 </div>
 
 
