--- a/cs03.html
+++ b/cs03.html
@@ -77,6 +77,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -320,13 +323,13 @@ div.tocify {
 </div>
 <div id="data" class="section level1">
 <h1>Data</h1>
-<p>-Liz point them to Sakai for birth and death datafiles -Liz provide NC shapefile here for plotting by county</p>
+<p>-Data from NC Birth and Death Records will be made available on Sakai</p>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
 <ul>
 <li>Interim report 1: create an engaging visualization of observed infant mortality rates by year, county and race</li>
-<li>Interim report 2: using a hierarchical model, obtain estimates of infant mortality rates in 2015 by county and race. Compare to the published estimates from the SCHS and discuss any discrepancies in detail. Your report should include a visualization for 2015, a one page (maximum) description of hte model used, 1-2 pages (maximum) describing your findings, and a one page report targeted at SCHS explaining how use of your model to obtain estimated rates compares to the methods you have seen them use so far, which are pooling years (as in the 2010-2014 graphic) or reporting rates based on small cell counts (as in 2015). In your report targeted to SCHS, if you feel they should use different methodology (e.g., your model) for estimating infant mortality rates, be sure to make a clear argument for doing so.</li>
+<li>Interim report 2: using a hierarchical model, obtain estimates of infant mortality rates in 2015 by county and race. Compare to the published estimates from the SCHS and discuss any discrepancies in detail. Your report should include a visualization for 2015, a one page (maximum) description of the model used, 1-2 pages (maximum) describing your findings, and a one page report targeted at SCHS explaining how use of your model to obtain estimated rates compares to the methods you have seen them use so far, which are pooling years (as in the 2010-2014 graphic) or reporting rates based on small cell counts (as in 2015). In your report targeted to SCHS, if you feel they should use different methodology (e.g., your model) for estimating infant mortality rates, be sure to make a clear argument for doing so.</li>
 <li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing infant mortality in NC by county and race, along with any trends over time</li>
 </ul>
 </div>
@@ -334,13 +337,22 @@ div.tocify {
 <h1>Resources</h1>
 <p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill</p>
 </div>
-<div id="slides" class="section level1">
-<h1>Slides</h1>
-<p><a href="decks/cs03_1_deck.html">Infant Mortality in NC</a></p>
-<p><a href="decks/cs03_2_deck.html">Multilevel Modeling Tutorial: Liz (including radon analysis from Gelman and Hill)</a></p>
-<p><a href="decks/cs03_3_deck.html">Binomial regression: Amy</a></p>
-<p><a href="decks/cs03_4_deck.html">Multilevel modeling with categorical data: Liz</a></p>
-<p><a href="decks/cs03_5_deck.html">Bayesian Hierarchical Modeing Using BMRS: Liz</a></p>
+<div id="slides-coming-soon" class="section level1">
+<h1>Slides (coming soon)</h1>
+<!---
+
+[Infant Mortality in NC](decks/cs03_1_deck.html)
+
+[Multilevel Modeling Tutorial: Liz (including radon analysis from Gelman and Hill)](decks/cs03_2_deck.html)
+
+
+[Binomial regression:  Amy ](decks/cs03_3_deck.html)
+
+[Multilevel modeling with categorical data: Liz](decks/cs03_4_deck.html)
+
+[Bayesian Hierarchical Modeing Using BMRS: Liz](decks/cs03_5_deck.html)
+
+--->
 </div>
 
 
