--- a/cs05.html
+++ b/cs05.html
@@ -77,6 +77,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -316,28 +319,38 @@ div.tocify {
 </div>
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
-<p>Based on data from the Duke Databank for Cardiovascular Diseases, we will explore biological and sociodemographic factors related to survival. In order to</p>
+<p>Based on data from the Duke Databank for Cardiovascular Diseases, we will explore biological and sociodemographic factors related to survival. The goal is to describe both modifiable and non-modifiable risk factors for death, accounting as much as possible for potential biases due to missing data.</p>
 </div>
-<div id="data" class="section level1">
-<h1>Data</h1>
-<p>-Jiurui post data on Sakai with data dictionary linked here; variables to include in dataset include the following: AGE_G, GENDER, RACE_G, YRCATH_G, CHFSEV, HXCEREB, HXCHF, HXCOPD, HXDIAB, HXHTN, HXMI, HXHYL, HXSMOKE, HEIGHT_R, WEIGHT_R, (calculate BMI from height and weight), S3, LMST, LVEF_R, NUMDZV, DEATH, DAYS2LKA -Jiurui let me know % with missing data for each variable. Also subset to one observation per person (repeat events are included, but there should be only one death) -NOtes: look at race by gender interaction, - outcome should be time to death. Have Jiurui construct this bearing in mind the censoring variable</p>
+<div id="data-coming-soon" class="section level1">
+<h1>Data (coming soon)</h1>
+<!---
+-Jiurui post data on Sakai with data dictionary linked here; variables to include in dataset include the following:  AGE_G, GENDER, RACE_G, YRCATH_G, CHFSEV, HXCEREB, HXCHF, HXCOPD, HXDIAB, HXHTN, HXMI, HXHYL, HXSMOKE, HEIGHT_R, WEIGHT_R, (calculate BMI from height and weight),  S3, LMST, LVEF_R, NUMDZV, DEATH, DAYS2LKA
+-Jiurui let me know % with missing data for each variable. Also subset to one observation per person (repeat events are included, but there should be only one death)
+-NOtes: look at race by gender interaction, 
+- outcome should be time to death. Have Jiurui construct this bearing in mind the censoring variable
+--->
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
 <ul>
-<li>Interim report 1: investigate patterns of missing data and comment on potential for bias in analysis results</li>
-<li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing survival as a function of predictor variables of interest</li>
+<li>Interim report 1: investigate patterns of missing data and comment on potential for bias in analysis results in a report not to exceed 3 pages. Reproducible code should be provided in an appendix.</li>
+<li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing survival as a function of predictor variables of interest. Reproducible code should be provided in an appendix.</li>
 </ul>
 </div>
-<div id="resources" class="section level1">
-<h1>Resources</h1>
-<p>Amy/Jiurui to update</p>
+<div id="resources-coming-soon" class="section level1">
+<h1>Resources (coming soon)</h1>
 </div>
-<div id="slides" class="section level1">
-<h1>Slides</h1>
-<p><a href="decks/cs05_1_deck.html">Duke Databank for Cardiovascular Disease</a></p>
-<p><a href="decks/cs05_2_deck.html">Missing data Tutorial: Jiurui</a></p>
-<p><a href="decks/cs05_3_deck.html">Survival analysis tutorial: Jiurui</a></p>
+<div id="slides-coming-soon" class="section level1">
+<h1>Slides (coming soon)</h1>
+<!---
+[Duke Databank for Cardiovascular Disease](decks/cs05_1_deck.html)
+
+
+[Missing data Tutorial: Jiurui](decks/cs05_2_deck.html)
+
+
+[Survival analysis tutorial: Jiurui ](decks/cs05_3_deck.html)
+--->
 </div>
 
 
