--- a/policies.html
+++ b/policies.html
@@ -77,6 +77,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -337,7 +340,7 @@ div.tocify {
 <h3>Course components:</h3>
 <div id="class-sessions" class="section level4">
 <h4>Class sessions:</h4>
-<p>If you miss class or would like to review the material covered in class, you can view the recordings <a href="https://trinity.capture.duke.edu/Panopto/Pages/Sessions/List.aspx?folderID=9161c49e-b3d5-4d40-a282-ebe8a938055d">here</a>. AMY UPDATE LINK Note that you will need to log in with your Net ID.</p>
+<p>If you miss class or would like to review the material covered in class, you can view the recordings <a href="">AT THIS LINK THAT WILL BE ADDED WHEN GIVEN TO ME</a>. Note that you will need to log in with your Net ID.</p>
 </div>
 <div id="teams" class="section level4">
 <h4>Teams:</h4>
@@ -391,6 +394,12 @@ div.tocify {
 <p>The grade for each group case study submission will be based on two components: (1) an overall score assigned to the work submitted, and (2) individual contribution to the work (as assessed by team members on Spliddit). Each team member’s grade on each submission <span class="math inline">\(s=1,\ldots,S\)</span> will be determined by taking the total number of team points available (points <span class="math inline">\(P_s\)</span> available for the assignment multiplied by <span class="math inline">\(N\)</span>, the number of team members) and assigning them proportionately to team members’ assessments of the division of work.</p>
 <p>Example: Suppose a submission is worth 100 points, and the team has 5 members. If the score (1) is 90, and all 5 team members contribute equally (20% of the work each), then each team member receives 450/5=90 points for the submission. If the contributions of the team members are (35%, 30%, 20%, 10%, 5%), then their respective grades are 157.5, 135, 90, 45, and 22.5 (i.e., 7 times the work yields 7 times the points).</p>
 <p>The total number of group project points over the course of the semester is <span class="math inline">\(N\sum_{s=1}^S P_s\)</span>, and the maximum number of points that will be awarded to any team member in total for group projects is <span class="math inline">\(100S\)</span>. This ensures (1) team members are able to adjust their effort levels on projects according to their interests and other time commitments, (2) teams are encouraged to ensure contributions over the course of the semester are balanced across team members, and (3) individuals who do not make strong contributions to the team will receive clear feedback regarding the need for adjustments to their efforts.</p>
+</div>
+<div id="accommodations" class="section level3">
+<h3>Accommodations:</h3>
+<ul>
+<li>Students who need accommodations in this class should contact the <a href="http://access.duke.edu/students/">Student Disability Access Office</a> as soon as possible to ensure appropriate accommodations can be made.</li>
+</ul>
 </div>
 <div id="excused-absences" class="section level3">
 <h3>Excused Absences:</h3>
