--- a/cs02.html
+++ b/cs02.html
@@ -11,7 +11,7 @@
 
 
 
-<title></title>
+<title>Case Study 2: Visualizing Global Health Data</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function ()  {
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
     };
-    options.showAndHide = true;
+    options.showAndHide = false;
     options.smoothScroll = true;
 
     // tocify
@@ -235,6 +235,12 @@ div.tocify {
   border-radius: 0px;
 }
 
+.tocify-subheader {
+  display: inline;
+}
+.tocify-subheader .tocify-item {
+  font-size: 0.95em;
+}
 
 </style>
 
@@ -298,216 +304,65 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">Case Study 2: Visualizing Global Health Data</h1>
 
 </div>
 
 
-<div id="welcome-to-sta440" class="section level1">
-<h1>Welcome to STA440!</h1>
-<div id="class-meetings" class="section level3">
-<h3>Class Meetings</h3>
-<p><font color="#6CA0DC"><i class="fas fa-university fa-lg"></i></font>   Perkins 071</p>
-<p><font color="#6CA0DC"><i class="fas fa-calendar-alt fa-lg"></i></font>   WF 11:45 - 1:00</p>
+<div id="learning-objectives" class="section level1">
+<h1>Learning Objectives</h1>
+<ul>
+<li>show mastery of data wrangling techniques, including combining data across different sources and formats, data harmonization, and creation of new variables</li>
+<li>create effective visual displays of complex information using R and Tableau</li>
+<li>create interactive visual presentations using Tableau</li>
+</ul>
 </div>
-<div id="teaching-team-and-office-hours" class="section level3">
-<h3>Teaching team and office hours</h3>
-<p>STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked “lab” will be taught by TA’s and involve hands-on analysis and/or consultation about case studies.</p>
-<p>Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Team member</th>
-<th>Office hours</th>
-<th>Location</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><a href="https://stat.duke.edu/people/amy-h-herring">Professor Amy Herring</a> <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>Wed and Thurs 1:30-2:30pm</td>
-<td>208 Old Chemistry</td>
-</tr>
-<tr class="even">
-<td><a href="https://stat.duke.edu/people/jiurui-tang">TA Jiurui Tang</a> <a href="mailto:jiurui.tang@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>TBD</td>
-<td>TBD</td>
-</tr>
-<tr class="odd">
-<td><a href="https://www2.stat.duke.edu/~oma9/">TA Michael Akande</a> <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>TBD</td>
-<td>TBD</td>
-</tr>
-</tbody>
-</table>
+<div id="case-study-goals" class="section level1">
+<h1>Case Study Goals</h1>
+<p>Using data from the World Bank, CIA Factbook, or a complex data source of your own choosing, - create a Shiny app in R to illustrate an aspect of our world in data - create an accompanying Tableau dashboard interactive visual presentation of our world in data</p>
 </div>
-<div id="materials" class="section level3">
-<h3>Materials</h3>
-<p>You should have access to a laptop and bring it to every class, fully charged. Texts and readings will be assigned as needed. Required software packages include R/RStudio (free) and Tableau (free for students).</p>
+<div id="data-coming-soon" class="section level1">
+<h1>Data (coming soon)</h1>
+<!---
+
+R Tutorial Data Set
+- [popDF.RData](data/popDF.RData)
+- [infMortDF.RData](data/infMortDF.RData)
+- [codeMapDF.RData](data/codeMapDF.RData)
+- [countries.csv](data/countries.csv)
+
+Full People And Society Data Set:
+- [full.RData](data/full.RData)
+
+How To Obtain Data from Factbook:
+- [Factbook Tutorial](data/data_file_2014.html)
+
+--->
 </div>
-<div id="topics-and-important-dates" class="section level3">
-<h3>Topics and Important Dates</h3>
-<table style="width:62%;">
-<colgroup>
-<col width="15%" />
-<col width="25%" />
-<col width="22%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>Date</th>
-<th>Topic</th>
-<th>Deliverables</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>August 29</td>
-<td>Welcome, Groups, and CS1: Birth Weight</td>
-<td>Regression warm-up (in class)</td>
-</tr>
-<tr class="even">
-<td>August 31</td>
-<td>CS1: Robust Regression</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>September 5</td>
-<td>CS1: Modeling in Class</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>September 7</td>
-<td>CS1: Causal Inference</td>
-<td>CS1 Interim Report: Model Development and Evaluation</td>
-</tr>
-<tr class="odd">
-<td>September 12</td>
-<td>CS2: Visualizing our World in Data</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>September 14</td>
-<td>CS2: Lab: Tableau</td>
-<td>CS1 Final Report: Smoking and Birth Weight</td>
-</tr>
-<tr class="odd">
-<td>September 19</td>
-<td>CS2: Tableau</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>Septmeber 21</td>
-<td>CS3: Hierarchical Models: Birth Weight Disparities</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>September 26</td>
-<td>Group Presentations of CS2</td>
-<td>CS2 Final Report: Our World in Data</td>
-</tr>
-<tr class="even">
-<td>Septmeber 28</td>
-<td>CS3: Multilevel Models: Time Trends</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>October 3</td>
-<td>CS3: Generalized Linear Mixed Effects Models</td>
-<td>CS3 Interim Report: Infant Mortality Visualization</td>
-</tr>
-<tr class="even">
-<td>October 5</td>
-<td>CS3: Bayesian Hierarchical Models</td>
-<td>Midsemester Grades Due (my deliverable) &amp; CS4 Evaluation Criteria</td>
-</tr>
-<tr class="odd">
-<td>October 10</td>
-<td>CS4: Election Forecasting</td>
-<td>CS3 Interim Report: County-Specific Mortality by Group</td>
-</tr>
-<tr class="even">
-<td>October 12</td>
-<td>CS4: Election Forecasting with “Mr. P”</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>October 17</td>
-<td>CS4: Who Votes in NC?</td>
-<td>CS3 Final Report: Infant Mortality Trends</td>
-</tr>
-<tr class="even">
-<td>October 19</td>
-<td>CS4: Election Modeling Workshop</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>October 24</td>
-<td>CS4: Presentations: Who Votes in NC?</td>
-<td>CS4 Interim Report: Who Votes in NC?</td>
-</tr>
-<tr class="even">
-<td>October 26</td>
-<td>Individual CS: Web Scraping</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>October 31</td>
-<td>Individual CS: Web Scraping</td>
-<td>CS4 Interim Report: Election Prediction Models</td>
-</tr>
-<tr class="even">
-<td>November 2</td>
-<td>Individual CS: Web Scraping Work in Groups</td>
-<td>CS4 Final Report due by Midnight Nov 5</td>
-</tr>
-<tr class="odd">
-<td>November 7</td>
-<td>CS4: Presentations: Post Election Diagnostics</td>
-<td>Individual CS Interim Report: Analysis Plan</td>
-</tr>
-<tr class="even">
-<td>November 9</td>
-<td>CS5: Missing Data: How to Survive</td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>Movember 14</td>
-<td>CS5: Missing Data</td>
-<td></td>
-</tr>
-<tr class="even">
-<td>November 16</td>
-<td>CS5: Missing Data</td>
-<td>CS5 Interim Report: Patterns of Missing Data</td>
-</tr>
-<tr class="odd">
-<td>November 28</td>
-<td>Lab: CS5 and Individual CS Help</td>
-<td>Individual CS Draft Report</td>
-</tr>
-<tr class="even">
-<td>November 30</td>
-<td>Lab: Individual CS Practice Presentations to Groups</td>
-<td>CS5: Final Report</td>
-</tr>
-<tr class="odd">
-<td>December 5</td>
-<td>Individual Presentations</td>
-<td>Individual Reports Due</td>
-</tr>
-<tr class="even">
-<td>December 7</td>
-<td>Individual Presentations</td>
-<td>Individual Reports Due</td>
-</tr>
-<tr class="odd">
-<td>December 13, 2-5pm</td>
-<td>Individual Presentations</td>
-<td>Individual Reports Due</td>
-</tr>
-</tbody>
-</table>
+<div id="reports" class="section level1">
+<h1>Reports</h1>
+<ul>
+<li>Final report: the final report will consist of a Shiny app and Tableau dashboard and will be presented to the class as part of a short (5 minute) oral presentation. Data sources must be clearly referenced, and a rationale for the data chosen to tell a story must be provided (one page maximum of written material)</li>
+</ul>
 </div>
+<div id="resources" class="section level1">
+<h1>Resources</h1>
+<p>Chapter 11 of Data Science in R: A Case Studies Approach to Computational Reasoning and Problem Solving by Nolan and Temple Lang (free e-book through Duke Libraries)</p>
+<p><a href="https://www.tableau.com/academic/students">Tableau for Students</a></p>
+<p><a href="http://library.capture.duke.edu/Panopto/Pages/Viewer.aspx?id=05708679-00e5-45c3-bb31-fd3724cd8009">Introduction to Tableau Video</a></p>
+</div>
+<div id="slides-coming-soon" class="section level1">
+<h1>Slides (coming soon)</h1>
+<!---
+[Initial description of CIA Factbook Data and Plotting in R](decks/cs02_1_deck.html)
+
+[Obtaining Tableau Guide](decks/cs02_2_deck.html)
+
+[Tableau visualization of Infant Mortality](decks/cs02_3_deck.html)
+
+[Tableau dashboard visualization of Infant Mortality](decks/cs02_4_deck.html)
+
+--->
 </div>
 
 
