--- a/cs_indiv.html
+++ b/cs_indiv.html
@@ -315,7 +315,7 @@ div.tocify {
 <li>learn to scrape data from HTML pages</li>
 <li>manipulate data obtained from HTML pages in R</li>
 <li>create helpful R functions to analyze web data and extract useful information</li>
-<li>create interactive function/app to facilitate exploratory analysis of identified data</li>
+<li>create interactive function/app for analysis of identified data</li>
 </ul>
 </div>
 <div id="case-study-goals" class="section level1">
@@ -325,7 +325,7 @@ div.tocify {
 <div id="data" class="section level1">
 <h1>Data</h1>
 <ul>
-<li>Data should be obtained via web scraping. Software should be able to relatively easily accommodate regular updates to the data, to the extent possible.</li>
+<li>Data should be obtained via web scraping or use of a dynamic online resource. Software should be able to relatively easily accommodate regular updates to the data, to the extent possible.</li>
 </ul>
 </div>
 <div id="reports" class="section level1">
@@ -338,7 +338,7 @@ div.tocify {
 </div>
 <div id="resources" class="section level1">
 <h1>Resources</h1>
-<p>Nolan and Temple Lang, Chapter 12</p>
+<p>Nolan and Temple Lang, Chapter 12 (some of this chapter is now outdated)</p>
 </div>
 <div id="slides-coming-soon" class="section level1">
 <h1>Slides (coming soon)</h1>
