--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ div.tocify {
 <tr class="even">
 <td>October 12</td>
 <td>CS4: Election Forecasting with “Mr. P”</td>
-<td></td>
+<td>CS4 Election Predictions</td>
 </tr>
 <tr class="odd">
 <td>October 17</td>
@@ -438,7 +438,7 @@ div.tocify {
 <tr class="even">
 <td>October 19</td>
 <td>CS4: Election Modeling Workshop</td>
-<td></td>
+<td>CS4 Election Predictions Update</td>
 </tr>
 <tr class="odd">
 <td>October 24</td>
@@ -448,7 +448,7 @@ div.tocify {
 <tr class="even">
 <td>October 26</td>
 <td>Individual CS: Web Scraping</td>
-<td></td>
+<td>CS4 Election Predictions Update</td>
 </tr>
 <tr class="odd">
 <td>October 31</td>
@@ -458,7 +458,7 @@ div.tocify {
 <tr class="even">
 <td>November 2</td>
 <td>Individual CS: Web Scraping Work in Groups</td>
-<td>CS4 Final Report due by Midnight Nov 5</td>
+<td>CS4 Election Predictions Update; CS4 Final Report Due by Midnight Nov 5</td>
 </tr>
 <tr class="odd">
 <td>November 7</td>
