--- a/policies.html
+++ b/policies.html
@@ -310,7 +310,7 @@ div.tocify {
 
 
 <div id="diversity-inclusiveness" class="section level3">
-<h3>Diversity &amp; Inclusiveness:</h3>
+<h3>Diversity &amp; inclusiveness</h3>
 <p>The Duke University Community Commitment states: ``Because diversity is essential to fulfilling the university’s mission, Duke is committed to building an inclusive and diverse university community. Every student, faculty, and staff member —whatever their race, gender, age, ethnicity, cultural heritage or nationality; religious or political beliefs; sexual orientation or gender identity; or socioeconomic, veteran or ability status—has the right to inclusion, respect, agency and voice in the Duke community. Further, all members of the University community have a responsibility to uphold these values and actively foster full participation in university life.’’</p>
 <p>It is my goal for our learning environment to facilitate learning and intellectual development for everyone. To help accomplish this:</p>
 <ul>
@@ -319,7 +319,7 @@ div.tocify {
 </ul>
 </div>
 <div id="academic-integrity" class="section level3">
-<h3>Academic integrity:</h3>
+<h3>Academic integrity</h3>
 <p>Duke University is a community dedicated to scholarship, leadership, and service and to the principles of honesty, fairness, respect, and accountability. Citizens of this community commit to reflect upon and uphold these principles in all academic and nonacademic endeavors, and to protect and promote a culture of integrity.</p>
 <p>Remember the Duke Community Standard that you have agreed to abide by:</p>
 <p>To uphold the Duke Community Standard:</p>
@@ -337,17 +337,17 @@ div.tocify {
 <p><strong>Referencing code:</strong> The web contains an enormous volume of code that you may find useful. You are welcome to make use of any online resources (e.g. StackOverflow), but you must explicitly cite your sources. Any recycled code that is discovered and is not explicitly cited will be treated as plagiarism. On the individual case study you may not directly share code with another student in this class, and on team assignments you may not share code with another team in this class (you are welcome to discuss the problems together and ask for advice, but you may not send or make use of code from another team).</p>
 </div>
 <div id="course-components" class="section level3">
-<h3>Course components:</h3>
+<h3>Course components</h3>
 <div id="class-sessions" class="section level4">
-<h4>Class sessions:</h4>
+<h4>Class sessions</h4>
 <p>If you miss class or would like to review the material covered in class, you can view the recordings <a href="">AT THIS LINK THAT WILL BE ADDED WHEN GIVEN TO ME</a>. Note that you will need to log in with your Net ID.</p>
 </div>
 <div id="teams" class="section level4">
-<h4>Teams:</h4>
+<h4>Teams</h4>
 <p>On the first day of class, we will develop teams of 5-7 students - these teams will stay consistent throughout the semester (barring extraordinary circumstances). You will work in these teams during class and on the five group case studies. The process of forming teams will be completely transparent and based on self-reported data.</p>
 </div>
 <div id="case-studies" class="section level4">
-<h4>Case Studies:</h4>
+<h4>Case studies</h4>
 <p>STA 440 involves detailed analysis of a series of case studies using current, relevant data. Each case study will involve a final submission and in some cases one or more interim submissions. Points will be allocated separately for each submission and case study based on the scope of work. Final case study submissions will involve a written report and possibly an oral presentation to be viewed by the other teams (in class or by video, as assigned).</p>
 <p>Additional details on the case studies will be provided as the course progresses.</p>
 <p>Individual contributions to each submission will be assessed using the fair division software Spliddit. Team members must provide Spliddit assessments in order to receive credit for an assignment.</p>
@@ -355,13 +355,13 @@ div.tocify {
 <p>Each case study will have a page limit, and under no circumstances should font sizes less than 11 point be used, with the exception of labels in figures (and then only if they are still clearly legible to readers of all ages).</p>
 </div>
 <div id="application-exercises" class="section level4">
-<h4>Application exercises:</h4>
+<h4>Application exercises</h4>
 <p>Short exercises will frequently be administered at the begininning of class to assess progress and identify areas for further development. Students will first complete these individually and hand them in; subsequently, the group will discuss the exercise and turn in a group solution.</p>
 <p>Students who miss individual and group submissions (due to late arrival or absence) will receive 0 points for those submissions. However, only the top 80% of submissions (separately for individual and group submissions) will count towards a student’s point total.</p>
 </div>
 </div>
 <div id="grading" class="section level3">
-<h3>Grading:</h3>
+<h3>Grading</h3>
 <p>Your final grade will be comprised of the following:</p>
 <table>
 <thead>
@@ -396,13 +396,13 @@ div.tocify {
 <p>The total number of group project points over the course of the semester is <span class="math inline">\(N\sum_{s=1}^S P_s\)</span>, and the maximum number of points that will be awarded to any team member in total for group projects is <span class="math inline">\(100S\)</span>. This ensures (1) team members are able to adjust their effort levels on projects according to their interests and other time commitments, (2) teams are encouraged to ensure contributions over the course of the semester are balanced across team members, and (3) individuals who do not make strong contributions to the team will receive clear feedback regarding the need for adjustments to their efforts.</p>
 </div>
 <div id="accommodations" class="section level3">
-<h3>Accommodations:</h3>
+<h3>Accommodations</h3>
 <ul>
 <li>Students who need accommodations in this class should contact the <a href="http://access.duke.edu/students/">Student Disability Access Office</a> as soon as possible to ensure appropriate accommodations can be made.</li>
 </ul>
 </div>
 <div id="excused-absences" class="section level3">
-<h3>Excused Absences:</h3>
+<h3>Excused absences</h3>
 <p>Students who miss a class due to a scheduled varsity trip, religious holiday, or short-term illness should fill out an online <a href="http://trinity.duke.edu/academic-requirements?p=notification-of-varsity-athletic-participation-novap">NOVAP</a>, <a href="http://trinity.duke.edu/academic-requirements?p=religious-observance">RHoliday</a> or <a href="http://trinity.duke.edu/academic-requirements?p=policy-short-term-illness-notification">short-term illness</a> form respectively. Note that these excused absences do not excuse you from assigned case studies; it is your responsibility to make alternative arrangements with your team to participate.</p>
 <p>If you are faced with a personal or family emergency or a chronic health condition that interferes with your ability to attend or complete classes, you should contact your academic dean’s office. See more information on policies surrounding these conditions at <a href="https://trinity.duke.edu/undergraduate/academic-policies/personal-emergencies" class="uri">https://trinity.duke.edu/undergraduate/academic-policies/personal-emergencies</a>. Your academic dean can also provide more information.</p>
 </div>
@@ -411,9 +411,10 @@ div.tocify {
 <p>Late work policy for case study reports:</p>
 <ul>
 <li>late, but within 24 hours of due date/time: -20%</li>
-<li><p>any later: no credit</p></li>
-<li><p>Late work will not be accepted for the election case study November 5 submission or the individual case study. Missed application exercises cannot be made up (the bottom 20% will be dropped).</p></li>
-<li><p>You must complete the individual case study and be in class to present it in order to pass this course.</p></li>
+<li>any later: no credit</li>
+<li>Late work will not be accepted for the election case study November 5 submission or the individual case study</li>
+<li>Missed application exercises cannot be made up (the bottom 20% will be dropped anyway)</li>
+<li>You must complete the individual case study and be in class to present it in order to pass this course.</li>
 </ul>
 </div>
 <div id="regrade-requests" class="section level3">
