--- a/index.html
+++ b/index.html
@@ -311,9 +311,13 @@ div.tocify {
 </div>
 <div id="teaching-team-and-office-hours" class="section level3">
 <h3>Teaching team and office hours</h3>
-<p>STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked “lab” will be taught by TA’s and involve hands-on analysis and/or consultation about case studies.</p>
-<p>Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified.</p>
-<table>
+<p>Note: office hours may vary due to travel and other commitments. Revisions to office hours will be noted in Sakai and on my office door.</p>
+<table style="width:29%;">
+<colgroup>
+<col width="15%" />
+<col width="6%" />
+<col width="6%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Team member</th>
@@ -324,7 +328,7 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td><a href="https://stat.duke.edu/people/amy-h-herring">Professor Amy Herring</a> <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>Wed and Thurs 1:30-2:30pm</td>
+<td>Wednesday and Thursday 1:30-2:30pm</td>
 <td>208 Old Chemistry</td>
 </tr>
 <tr class="even">
@@ -334,7 +338,7 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td><a href="https://www2.stat.duke.edu/~oma9/">TA Michael Akande</a> <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>TBD</td>
+<td>Tuesday 5-6pm and Friday 2:25-3:35pm</td>
 <td>TBD</td>
 </tr>
 </tbody>
@@ -346,6 +350,8 @@ div.tocify {
 </div>
 <div id="topics-and-important-dates" class="section level3">
 <h3>Topics and Important Dates</h3>
+<p>STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked “lab” will be taught by TA’s and involve hands-on analysis and/or consultation about case studies.</p>
+<p>Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified.</p>
 <table style="width:62%;">
 <colgroup>
 <col width="15%" />
