--- a/cs01.html
+++ b/cs01.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Case Study 1: Birthweight</title>
+<title>Case Study 1: Birth Weight</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -304,7 +304,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Case Study 1: Birthweight</h1>
+<h1 class="title toc-ignore">Case Study 1: Birth Weight</h1>
 
 </div>
 
@@ -320,9 +320,9 @@ div.tocify {
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
 <ul>
-<li>determine which factors are associated with birthweight and characterize the relationship between each factor and birthweight</li>
+<li>determine which factors are associated with birth weight and characterize the relationship between each factor and birth weight</li>
 <li>explore whether fit of a linear regression model is adequate or whether robust regression methods are needed</li>
-<li>estimate the impact of eliminating maternal smoking on birthweight in a population</li>
+<li>estimate the impact of eliminating maternal smoking on birth weight in a population</li>
 </ul>
 </div>
 <div id="data" class="section level1">
@@ -335,27 +335,19 @@ div.tocify {
 <h1>Reports</h1>
 <ul>
 <li><p>Interim report: produce a 5 page (maximum) report using R markdown that clearly describes your process for model selection and validation. Provide clear interpretations of the associations between each predictor and birth weight in layperson’s language, including characterization of uncertainty. Figures may be included as appropriate. Code should be fully reproducible.</p></li>
-<li><p>Final report: produce a 5 page (maximum) report using R markdown that addresses the potential impact of eliminating smoking on birthweight in the population. Clearly describe your modeling approach and any assumptions required to produce estimates. Figures should be included. Code should be fully reproducible.</p></li>
+<li><p>Final report: produce a 5 page (maximum) report using R markdown that addresses the potential impact of eliminating smoking on birth weight in the population. Clearly describe your modeling approach and any assumptions required to produce estimates. Figures should be included. Code should be fully reproducible.</p></li>
 </ul>
 </div>
 <div id="resources" class="section level1">
 <h1>Resources</h1>
 <p>An Introduction to Statistical Learning with Applications in R, James et al (2013), Chapter 5: Resampling Methods (free e-book through Duke Libraries)</p>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
-<!---
-[Initial description of case study](decks/cs01_1_deck.html)
-
-[Cross-validation](decks/cs01_2_deck.html)
-
-[Robust regression](decks/cs01_3_deck.html)
-
-[Causal inference-Liz to create](decks/cs01_4_deck.html)
-
-Why do I care about outliers?  Talk about financial crisis. Amy to do.
-
---->
+<div id="slides" class="section level1">
+<h1>Slides</h1>
+<p><a href="decks/cs01_1_deck.html">Birth weight data</a></p>
+<p><a href="decks/cs01_2_deck.html">Model validation</a></p>
+<p><a href="decks/cs01_3_deck.html">Least squares and robust regression</a></p>
+<p><a href="decks/cs01_4_deck.html">Introduction to Causal Inference</a></p>
 </div>
 
 
