--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@ div.tocify {
 <td>208 Old Chemistry</td>
 </tr>
 <tr class="even">
-<td><a href="https://stat.duke.edu/people/jiurui-tang">TA Jiurui Tang</a> <a href="mailto:jiurui.tang@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>TBD</td>
+<td><a href="https://www2.stat.duke.edu/~oma9/">TA Michael Akande</a> <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
+<td>Tuesday 5-6pm and Friday 2:25-3:35pm</td>
 <td>TBD</td>
 </tr>
 <tr class="odd">
-<td><a href="https://www2.stat.duke.edu/~oma9/">TA Michael Akande</a> <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>Tuesday 5-6pm and Friday 2:25-3:35pm</td>
+<td><a href="https://stat.duke.edu/">TA TBA</a> <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
+<td>TBD</td>
 <td>TBD</td>
 </tr>
 </tbody>
