--- a/cs01.html
+++ b/cs01.html
@@ -347,7 +347,7 @@ div.tocify {
 <p><a href="decks/cs01_1_deck.html">Birth weight data</a></p>
 <p><a href="decks/cs01_2_deck.html">Model validation</a></p>
 <p><a href="decks/cs01_3_deck.html">Least squares and robust regression</a></p>
-<p><a href="decks/cs01_4_deck.html">Introduction to Causal Inference</a></p>
+<p><a href="decks/cs01_4_deck.html">Introduction to causal inference</a></p>
 </div>
 
 
